--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,11 +49,10 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation "androidx.room:room-runtime:2.2.6"
-    implementation "android.arch.work:work-runtime-ktx:2.2.6"
+    implementation "androidx.work:work-runtime-ktx:2.5.0"
     implementation 'com.google.code.gson:gson:2.8.6'
     kapt "androidx.room:room-compiler:2.2.6"
     implementation "androidx.room:room-ktx:2.2.6"
-    implementation 'androidx.work:work-runtime:2.4.0'
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
